<resources>
    <string name="app_name">firebase</string>
    <string name="go">Go</string>
    <string name="number">Number</string>
    <string name="delete_all">Delete All</string>
    <string name="empty_contact_list">Empty contact list!</string>
    <string name="name_surname">Name Surname</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_name">Enter Name</string>
</resources>